CNI: Add support for OpenShift and Multus (#1527)
* Added SecurityContextConstraints CRD so that CNI has the permissions to run on OpenShift and gave the consul-cni service account permissions to reach OpenShifts SCC CRD.
* Added a --multus flag to the CNI installer so that the flag can be used by the CNI plugin.
* When --multus flag is set, create a default Network Attachment Definition CRD for Multus to use. Note, Pods require an annotation in order for Multus to run the consul-cni plugin. Please see Multus documentation for more information about how to use Multus.
* Fix: Fixed installer to rename .conf file .conflist file when consul-cni is added to a base plugin.
* Improvement: The plugin is now more consistent at updating annotations.

--- a/charts/consul/templates/cni-clusterrole.yaml
+++ b/charts/consul/templates/cni-clusterrole.yaml
@@ -27,4 +27,12 @@ rules:
   - {{ template "consul.fullname" . }}-cni
   verbs:
   - use
+{{- if .Values.global.openshift.enabled}}
+- apiGroups: ["security.openshift.io"]
+  resources: ["securitycontextconstraints"]
+  resourceNames:
+  - {{ template "consul.fullname" . }}-cni
+  verbs:
+  - use
+{{- end }}
 {{- end }}
