--- a/charts/consul/templates/mesh-gateway-deployment.yaml
+++ b/charts/consul/templates/mesh-gateway-deployment.yaml
@@ -152,7 +152,7 @@ spec:
         volumeMounts:
         - name: consul-service
           mountPath: /consul/service
-        {{- if .Values.global.tls.enabled }}
+        {{- if and .Values.global.tls.enabled (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
         - name: consul-ca-cert
           mountPath: /consul/tls/ca
           readOnly: true
@@ -175,7 +175,7 @@ spec:
         - mountPath: /consul/service
           name: consul-service
           readOnly: true
-        {{- if .Values.global.tls.enabled }}
+        {{- if and .Values.global.tls.enabled (not (and .Values.externalServers.enabled .Values.externalServers.useSystemRoots)) }}
         - name: consul-ca-cert
           mountPath: /consul/tls/ca
           readOnly: true
@@ -195,7 +195,7 @@ spec:
         - |
           consul-dataplane \
             {{- if .Values.externalServers.enabled }}
-            -addresses={{ .Values.externalServers.hosts | first }} \
+            -addresses={{ .Values.externalServers.hosts | first | quote }} \
             {{- else }}
             -addresses="{{ template "consul.fullname" . }}-server.{{ .Release.Namespace }}.svc" \
             {{- end }}
