Register Ingress Gateway with Endpoints Controller (#1544)
- Use consul-dataplane instead of envoy.

--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -120,6 +120,9 @@ spec:
             - "-ec"
             - |
               consul-k8s-control-plane inject-connect \
+                {{- if .Values.global.federation.enabled }}
+                -enable-federation \
+                {{- end }}
                 -log-level={{ default .Values.global.logLevel .Values.connectInject.logLevel }} \
                 -log-json={{ .Values.global.logJSON }} \
                 -default-inject={{ .Values.connectInject.default }} \
