--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,7 +14,7 @@ jobs:
     container: hashicorpdev/backport-assistant:0.2.5
     steps:
       - name: Run Backport Assistant
-        run: backport-assistant backport -automerge
+        run: backport-assistant backport -automerge -merge-method=squash
         env:
           BACKPORT_LABEL_REGEXP: "backport/(?P<target>\\d+\\.\\d+\\.x)"
           BACKPORT_TARGET_TEMPLATE: "release/{{.target}}"
