update service config crds, update passive health check (#1484)
* update service config crds, update passive health check

* get latest type changes from consul api, address comments

* Update control-plane/api/v1alpha1/servicedefaults_types_test.go

Co-authored-by: Kyle Schochenmaier <kschoche@gmail.com>

* replace pointer func calls with library function

* fix import

Co-authored-by: Kyle Schochenmaier <kschoche@gmail.com>

--- a/charts/consul/templates/crd-servicedefaults.yaml
+++ b/charts/consul/templates/crd-servicedefaults.yaml
@@ -241,6 +241,13 @@ spec:
                           upstream proxy instances will be monitored for removal from
                           the load balancing pool.
                         properties:
+                          enforcing_consecutive_5xx:
+                            description: EnforcingConsecutive5xx is the % chance that
+                              a host will be actually ejected when an outlier status
+                              is detected through consecutive 5xx. This setting can
+                              be used to disable ejection or to ramp it up slowly.
+                            format: int32
+                            type: integer
                           interval:
                             description: Interval between health check analysis sweeps.
                               Each sweep may remove hosts or return hosts to the pool.
@@ -333,6 +340,13 @@ spec:
                             how upstream proxy instances will be monitored for removal
                             from the load balancing pool.
                           properties:
+                            enforcing_consecutive_5xx:
+                              description: EnforcingConsecutive5xx is the % chance
+                                that a host will be actually ejected when an outlier
+                                status is detected through consecutive 5xx. This setting
+                                can be used to disable ejection or to ramp it up slowly.
+                              format: int32
+                              type: integer
                             interval:
                               description: Interval between health check analysis
                                 sweeps. Each sweep may remove hosts or return hosts
